[package]
edition = "2021"
name = "task-bot-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
dotenvy = "0.15.7"
itertools = "0.13.0"
poise = "0.6.1"
serde = {version = "1.0.213", features = ["derive"]}
serde_json = "1.0.132"
tokio = {version = "1.40.0", features = ["rt-multi-thread"]}
uuid = {version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
