[package]
edition = "2021"
name = "task-bot-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dotenvy = "0.15.7"
itertools = "0.13.0"
poise = "0.6.1"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
tokio = {version = "1.41.1", features = ["rt-multi-thread", "fs"]}
uuid = {version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
